# torab

./: .gitignore  README.md  index.html
Card_Play_Recoder/: Dockerfile  README.md  send_video.sh  video_play.sh
Nap/: README.md  game.py  index.html  player.py  pyproject.toml  run_server.sh  test.sh  utils.py
Nap/asset/css/: button.css  fukidasi.css  note.css
Nap/asset/favicon/: README.md
Nap/kivy/asset/kv/: main.kv
Nap/kivy/src/: main.py
Nap/kivy/src/utils/: games.py
Nap/pyscript/: README.md  button.py  games.py  main.py  pyscript.toml  server.py  worker.py
Nap/pyscript/server/: README.md
Nap/pyscript/src/: main.py  worker.py
Nap/pyscript/src/utils/: button.py  games.py
Nap/pyscript/tests/: conftest.py  test_main.py  test_worker.py
Nap/pyscript/utils/: games.py
Nap/src/: README.md  field.py  game.py  player.py
Nap/src/bid/: __init__.py  bid.py
Nap/src/game/: __init__.py  game.py  track.py  vs_series.py
Nap/src/player/: __init__.py  charactor.py  declear.py  player.py
Nap/src/utils/: __init__.py  card.py  deck.py  field.py  logger.py
Nap/test/: test_suit.py  test_track.py
Nap/tests/: README.md  conftest.py  test_card.py  test_deck.py  test_declare.py  test_field.py  test_track.py
Nap/tests/bid/: test_bid.py
Nap/tests/game/: test_game.py  test_track.py  test_vs_series.py
Nap/tests/player/: test_charactor.py  test_player.py
Nap/tests/utils/: test_card.py  test_deck.py  test_field.py  test_suit.py
Nap/utils/: __init__.py  base.py
mida/: index.html  main.py  pyscript.toml
