[tool.poetry]
name = "nap"
version = "0.1.0"
description = "トランプゲームNap"
authors = ["yoneda <yhayato1320@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
pytest = "^8.1.1"
pillow = "^10.2.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
requests-html = "^0.10.0"
lxml-html-clean = "^0.1.1"
selenium = "^4.19.0"
pydantic = "^2.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
